Added CYO Markup Framework Implemented the CYO framework and added an example adventure to the Depression Screening Algorithm view

--- a/testApp/www/templates/home.html
+++ b/testApp/www/templates/home.html
@@ -1,6 +1,16 @@
 <ion-view title="Home" hide-back-button="true" id="page1">
 	<ion-content padding="true" class="has-header">
-		<ion-list id="home-list3">
+		<div class="list card" id="homeome-card21">
+				<div class="item item-body" id="home-list-item-container2">
+						<h1 id="depressionScreeningAlgorthm-heading2" style="color:#000000;">Welcome to Compass</h1>
+						<div id="depressionScreeningAlgorthm-markdown2" style="color:#000000;">
+								<img src="img/compass.png" style="width:100%"></img>
+								<h2>This application is a proof of concept for the Ionic platform. </h2>
+								<p>Please swipe to the right or press the menu button in the top left to view the menu</p>
+						</div>
+				</div>
+		</div>
+		<!-- <ion-list id="home-list3">
 			<ion-item class="item-thumbnail-left" id="home-list-item6" ui-sref="menu.depressionScreeningAlgorthm">
 				<img src="img/sad1.jpg"></img>
 				<p style="white-space:normal;">Depression screening algorithm</p>
@@ -17,6 +27,6 @@
 				<img src="img/sad4.jpeg"></img>
 				<p style="white-space:normal;">Anti depression treatment algorithm</p>
 			</ion-item>
-		</ion-list>
+		</ion-list> -->
 	</ion-content>
 </ion-view>
