updated UI compeltely changed codebase to include UI from new prototype/wireframe. Removed CYO code so need to reimplement that

--- a/testApp/www/templates/home.html
+++ b/testApp/www/templates/home.html
@@ -1,32 +1,19 @@
-<ion-view title="Home" hide-back-button="true" id="page1">
-	<ion-content padding="true" class="has-header">
-		<div class="list card" id="homeome-card21">
-				<div class="item item-body" id="home-list-item-container2">
-						<h1 id="depressionScreeningAlgorthm-heading2" style="color:#000000;">Welcome to Compass</h1>
-						<div id="depressionScreeningAlgorthm-markdown2" style="color:#000000;">
-								<img src="img/compass.png" style="width:100%"></img>
-								<h2>This application is a proof of concept for the Ionic platform. </h2>
-								<p>Please swipe to the right or press the menu button in the top left to view the menu</p>
-						</div>
-				</div>
-		</div>
-		<!-- <ion-list id="home-list3">
-			<ion-item class="item-thumbnail-left" id="home-list-item6" ui-sref="menu.depressionScreeningAlgorthm">
-				<img src="img/sad1.jpg"></img>
-				<p style="white-space:normal;">Depression screening algorithm</p>
-			</ion-item>
-			<ion-item class="item-thumbnail-left" id="home-list-item11" ui-sref="menu.bipolarDisorderScreening">
-				<img src="img/sad2.jpg"></img>
-				<p style="white-space:normal;">Bipolar disorder screen</p>
-			</ion-item>
-			<ion-item class="item-thumbnail-left" id="home-list-item12" ui-sref="menu.recommendedSteps">
-				<img src="img/sad3.jpg"></img>
-				<p style="white-space:normal;">Recommended steps before beginning antidepressant medication</p>
-			</ion-item>
-			<ion-item class="item-thumbnail-left" id="home-list-item13" ui-sref="menu.antiDepressionTreatment">
-				<img src="img/sad4.jpeg"></img>
-				<p style="white-space:normal;">Anti depression treatment algorithm</p>
-			</ion-item>
-		</ion-list> -->
-	</ion-content>
+<ion-view title="Home" id="page2">
+    <ion-content padding="true" class="has-header">
+        <ion-list id="home-list3">
+            <ion-item class="item-icon-left item-icon-right positive  intro" id="home-list-item7">
+                <i class="icon ion-ios-information"></i>How to use this app
+                <i class="icon ion-android-hand icon-accessory"></i>
+            </ion-item>
+        </ion-list>
+        <div>
+            <img src="img/DjjOFgpvQmekXzJWVhZV_mom.jpg" width="100%" height="" style="display: block; margin-left: auto; margin-right: auto;">
+        </div>
+        <ion-list id="home-list4">
+            <ion-item class="item-divider" id="home-list-item-divider1">Lifeline4Moms</ion-item>
+            <ion-item id="home-list-item10">Medical Information</ion-item>
+            <ion-item id="home-list-item8">Bipolar Screening</ion-item>
+            <ion-item id="home-list-item9">Emotional Complications</ion-item>
+        </ion-list>
+    </ion-content>
 </ion-view>
